--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,191 @@
 .header {
     display: flex;
     position: sticky;
+    padding: 5px;
     top: 5px;
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: darkgrey;
-    border: 1px solid black;}
+    border: 5px inset black;
+}
 
-.titulo{
+.botones .titulo {
     display: flex;
     margin-left: 10px;
-    }
+}
 
-.escudo{
-margin-left: 250px;
-margin-right: 250px;
+.escudo {
+    margin-left: 250px;
+    margin-right: 250px;
     width: 100px;
-    height: 100px;}
+    height: 100px;
+}
 
 
 #historia {
+    display: grid;
+    padding: 10px;
+    grid-template-rows: 500px 1fr;
+    grid-template-columns: 1fr 1fr;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: justify;
-    background-color: darkgrey}
+    border: 1px solid black;
+    background-color: #a0a0a0
+}
 
-#historia h2 {
-    text-align: center;}
+.historia-del-club {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.sede-del-club {
+    grid-column: 2/2;
+    grid-row: 1/2;
+    padding: 10px;
+    width: 1fr;
+    height: 500px;
+}
+
+.historia-del-club-segunda-parte {
+    padding-top: 10px;
+    grid-column: 1/4;
+    grid-row: 2/4;
+}
 
 #ubicacion {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-color: darkgrey}
-footer {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: justify;
-    background-color: darkgrey}
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    background-color: #a0a0a0
+}
 
-body{background-color: beige;}
-/*seccion futbol*/ 
+#footer {
+    text-align: center;
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #a0a0a0
+}
+
+body {
+    background-color: #696969;
+}
+
+/*pagina de futbol*/
+
+#menu-futbol {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+#futbol-masculino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#futbol-femenino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#futbol-infantil {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+/*pagina de basquet*/
+
+#menu-basquet {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+.logo-basquet {
+    padding-bottom: 20px;
+}
+
+#basquet-masculino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#basquet-femenino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#basquet-infantil {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+/*pagina de voley*/
+#menu-voley {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+.logo-voley{padding-bottom: 20px;}
+
+#voley-masculino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#voley-femenino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#voley-infantil {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+/*pagina de patinaje*/
+
+#menu-patinaje{ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;}
+
+.logo-patinaje{padding-bottom: 20px;}
+
+#patinaje-masculino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#patinaje-femenino {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
+
+#patinaje-infantil {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    padding: 5px;
+    background-color: #a0a0a0;
+}
