--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
     grid-row: 1/2;
     padding: 10px;
     width: 1fr;
-    height: 500px;
+    height: 1fr;
 }
 
 .historia-del-club-segunda-parte {
@@ -80,6 +80,10 @@ body {
 #menu-futbol {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+}
+
+#carouselExampleIndicators{
+    justify-content: center;
 }
 
 #futbol-masculino {
@@ -190,3 +194,4 @@ body {
     padding: 5px;
     background-color: #a0a0a0;
 }
+
