--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,234 +1,80 @@
 /* Pagina de inicio*/
-.header {
+body{
+    background-color: white;
+  }
+  header {
     display: flex;
     position: sticky;
-    padding: 5px;
-    top: 5px;
     align-items: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: darkgrey;
-    border: 5px inset black;
-}
-
-.botones .titulo {
-    display: flex;
-    margin-left: 10px;
-}
-
-.escudo {
-    margin-left: 250px;
-    margin-right: 250px;
-    width: 100px;
-    height: 100px;
-}
-
-
-#historia {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    background-color: black;
+    border: 2px solid gray;
+    color: white;
+  }
+  .escudo {
+    width: 70px;
+    height: 70px;
+  }
+  .botones{
+    margin-left: 500px;
+    text-decoration: none;
+  }
+  
+  #historia {
     display: grid;
     padding: 10px;
     grid-template-rows: 500px 1fr;
     grid-template-columns: 1fr 1fr;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     text-align: justify;
     border: 1px solid black;
-    background-color: #a0a0a0
-}
-
-.historia-del-club {
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-.sede-del-club {
-    grid-column: 2/2;
-    grid-row: 1/2;
-    padding: 10px;
-    width: 1fr;
-    height: 1fr;
-}
-
-.historia-del-club-segunda-parte {
-    padding-top: 10px;
-    grid-column: 1/4;
-    grid-row: 2/4;
-}
-
-#ubicacion {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #a0a0a0;
+  }
+  
+  #ubicacion {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     text-align: center;
     border: 1px solid black;
     padding: 10px;
     margin: 10px;
-    background-color: #a0a0a0
-}
-
-#footer {
+    background-color: #a0a0a0;
+  }
+  
+  footer {
     text-align: center;
     margin: 20px;
     padding: 10px;
     border: 1px solid black;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #a0a0a0
-}
-
-body {
-    background-color: #696969;
-}
-
-/*pagina de futbol*/
-
-#menu-futbol {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-#carouselExampleIndicators {
-    justify-content: center;
-}
-
-#futbol-masculino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
     background-color: #a0a0a0;
-}
-
-#futbol-femenino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#futbol-infantil {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-/*pagina de basquet*/
-
-#menu-basquet {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.logo-basquet {
-    padding-bottom: 20px;
-}
-
-#basquet-masculino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#basquet-femenino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#basquet-infantil {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-/*pagina de voley*/
-#menu-voley {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.logo-voley {
-    padding-bottom: 20px;
-}
-
-#voley-masculino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#voley-femenino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#voley-infantil {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-/*pagina de patinaje (apta para mobile)*/
-@media only screen and (min-width:500px) and (max-width:2000px) {
-#menu-patinaje {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.logo-patinaje {
-    padding-bottom: 20px;
-}
-
-#patinaje-masculino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#patinaje-femenino {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-#patinaje-infantil {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    padding: 5px;
-    background-color: #a0a0a0;
-}
-
-/* pagina de galeria (apta para mobile)*/
-
-
+  }
+  /*pagina de patinaje (apta para mobile)*/
+  @media only screen and (min-width: 500px) and (max-width: 2000px) {
+    /* pagina de galeria (apta para mobile)*/
     #carrusel-futbol {
-        display: flex;
-        padding: 50px;
-        background-color: black;
-        order: 0;
+      display: flex;
+      padding: 50px;
+      background-color: black;
+      order: 0;
     }
-
     #carrusel-basquet {
-        padding: 50px;
-        background-color: black;
+      padding: 50px;
+      background-color: black;
     }
-
     #carrusel-voley {
-        padding: 50px;
-        background-color: black;
+      padding: 50px;
+      background-color: black;
     }
-
     .header-galeria {
-        display: flex;
-        padding: 5px;
-        top: 5px;
-        align-items: center;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        background-color: darkgrey;
-        border: 5px inset black
+      display: flex;
+      padding: 5px;
+      top: 5px;
+      align-items: center;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+      background-color: darkgrey;
+      border: 5px inset black;
     }
-}
+  }
+  
+  /*# sourceMappingURL=style.css.map */
+  
